--- a/index.html
+++ b/index.html
@@ -120,27 +120,37 @@
     </nav>
 
     <!-- Hero Section -->
-    <section class="relative h-screen flex items-center justify-center">
-      <div class="absolute inset-0 overflow-hidden">
-        <img src="/images/drc.jpg" style="position: relative" />
-        <div class="absolute inset-0 bg-black bg-opacity-50"></div>
+    <div class="relative h-screen w-full overflow-hidden">
+      <!-- Update the image container -->
+      <div class="absolute inset-0 w-full h-full">
+        <img
+          src="images/drc.jpg"
+          alt="DRC Background"
+          class="absolute w-full h-full object-cover object-center left-0 top-0 right-0 bottom-0"
+        />
+        <!-- Overlay -->
+        <div class="absolute inset-0 bg-black/40"></div>
       </div>
 
-      <div class="relative z-10 text-center px-4">
-        <h1 class="text-4xl md:text-6xl font-bold text-white mb-6">
-          Innovating Tomorrow, Today
+      <!-- Update the content container -->
+      <div
+        class="relative h-full flex flex-col justify-center items-center text-center px-4 sm:px-6 lg:px-8"
+      >
+        <h1 class="text-4xl sm:text-5xl lg:text-6xl font-bold text-white mb-4">
+          Welcome to IDEAS DEN
         </h1>
-        <p class="text-xl md:text-2xl text-gray-200 mb-8">
-          Join us in shaping the future through collaborative innovation
+        <p class="text-lg sm:text-xl lg:text-2xl text-gray-200 mb-8 max-w-3xl">
+          Empowering Innovation and Creativity in the Democratic Republic of
+          Congo
         </p>
         <a
-          href="/pages/projects.html"
-          class="inline-block bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-8 rounded-full transition duration-300"
+          href="#featured"
+          class="bg-[#007BFF] hover:bg-[#0056b3] text-white font-bold py-3 px-6 rounded-lg transition-all duration-1000 hover:shadow-lg"
         >
-          Explore Our Projects
+          Learn More
         </a>
       </div>
-    </section>
+    </div>
 
     <!-- Featured Section -->
     <section class="pt-32 pb-20 bg-[#0A1F44]/30">
