--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           Congo
         </p>
         <a
-          href="#featured"
+          href="https://www.canva.com/design/DAGhhU_WPNU/48BQtJlb7j_hlWE-IrI-0A/view?utm_content=DAGhhU_WPNU&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=hb5ce81f320"
           class="bg-[#007BFF] hover:bg-[#0056b3] text-white font-bold py-3 px-6 rounded-lg transition-all duration-1000 hover:shadow-lg"
         >
           Learn More
@@ -307,4 +307,3 @@
     <script src="js/main.js"></script>
   </body>
 </html>
-
