--- a/pages/projects.html
+++ b/pages/projects.html
@@ -148,7 +148,7 @@
             class="bg-[#0A1F44]/40 rounded-lg overflow-hidden shadow-lg border border-[#00FFFF]/20 animate-on-scroll"
           >
             <img
-              src="https://via.placeholder.com/600x400"
+              src="/images/mobile clinic.webp"
               alt="Project 1"
               class="w-full h-48 object-cover"
             />
@@ -186,7 +186,7 @@
             class="bg-[#0A1F44]/40 rounded-lg overflow-hidden shadow-lg border border-[#00FFFF]/20 animate-on-scroll"
           >
             <img
-              src="https://via.placeholder.com/600x400"
+              src="/images/telemedicine.jpeg"
               alt="Project 2"
               class="w-full h-48 object-cover"
             />
@@ -223,7 +223,7 @@
             class="bg-[#0A1F44]/40 rounded-lg overflow-hidden shadow-lg border border-[#00FFFF]/20 animate-on-scroll"
           >
             <img
-              src="https://via.placeholder.com/600x400"
+              src="/images/training.jpeg"
               alt="Project 3"
               class="w-full h-48 object-cover"
             />
@@ -270,7 +270,7 @@
         <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 items-center">
           <div class="animate-on-scroll">
             <img
-              src="https://via.placeholder.com/800x600"
+              src="/images/mobile-tele.jpeg"
               alt="Featured Project"
               class="rounded-lg shadow-lg"
             />
@@ -416,3 +416,4 @@
     <script src="../js/main.js"></script>
   </body>
 </html>
+
