--- a/pages/media.html
+++ b/pages/media.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Media Gallery - E-Lab Think Tank</title>
+    <title>Media Gallery - IDEAS DEN</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="../css/styles.css" rel="stylesheet" />
     <link
@@ -152,12 +152,12 @@
         <div class="grid grid-cols-1 md:grid-cols-3 lg:grid-cols-4 gap-4 mb-20">
           <!-- Gallery Item 1 -->
           <a
-            href="https://via.placeholder.com/1200x800"
+            href="/images/blueprint.webp"
             data-lightbox="gallery"
             class="block group relative animate-on-scroll"
           >
             <img
-              src="https://via.placeholder.com/400x300"
+              src="/images/blueprint.webp"
               alt="Gallery Image 1"
               class="w-full h-64 object-cover rounded-lg"
             />
@@ -172,12 +172,12 @@
 
           <!-- Gallery Item 2 -->
           <a
-            href="https://via.placeholder.com/1200x800"
+            href="/images/mobile clinic.webp"
             data-lightbox="gallery"
             class="block group relative animate-on-scroll"
           >
             <img
-              src="https://via.placeholder.com/400x300"
+              src="/images/mobile clinic.webp"
               alt="Gallery Image 2"
               class="w-full h-64 object-cover rounded-lg"
             />
@@ -191,12 +191,12 @@
           </a>
 
           <a
-            href="https://via.placeholder.com/1200x800"
+            href="/images/telemedicine.jpeg"
             data-lightbox="gallery"
             class="block group relative animate-on-scroll"
           >
             <img
-              src="https://via.placeholder.com/400x300"
+              src="/images/telemedicine.jpeg"
               alt="Gallery Image 3"
               class="w-full h-64 object-cover rounded-lg"
             />
@@ -209,12 +209,12 @@
             </div>
           </a>
           <a
-            href="https://via.placeholder.com/1200x800"
+            href="/images/mobile-tele.jpeg"
             data-lightbox="gallery"
             class="block group relative animate-on-scroll"
           >
             <img
-              src="https://via.placeholder.com/400x300"
+              src="/images/mobile-tele.jpeg"
               alt="Gallery Image 2"
               class="w-full h-64 object-cover rounded-lg"
             />
