--- a/pages/media.html
+++ b/pages/media.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Media Gallery - IDEAS DEN</title>
+    <title>Media Gallery - E-Lab Think Tank</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="../css/styles.css" rel="stylesheet" />
     <link
@@ -234,12 +234,33 @@
           <h2 class="text-3xl font-bold text-center text-[#00FFFF] mb-12">
             Featured Video
           </h2>
+          <h2 class="text-3xl font-bold text-center text-[#00FFFF] mb-12">
+            IDEAS DEN | CHALLENGE 5: MISSION V2
+          </h2>
           <div class="max-w-4xl mx-auto">
             <div class="relative pt-[56.25%]">
               <iframe
                 class="absolute inset-0 w-full h-full rounded-lg shadow-lg"
                 src="https://www.youtube.com/embed/jjBjTj95ywU"
                 title="IDEAS DEN | CHALLENGE 5: MISSION V2"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              >
+              </iframe>
+            </div>
+          </div>
+        </div>
+        <div class="mb-20">
+          <h2 class="text-3xl font-bold text-center text-[#00FFFF] mb-12">
+            IDEAS DEN | CHALLENGE 4: HUNTING FOR TREASURE
+          </h2>
+          <div class="max-w-4xl mx-auto">
+            <div class="relative pt-[56.25%]">
+              <iframe
+                class="absolute inset-0 w-full h-full rounded-lg shadow-lg"
+                src="https://www.youtube.com/embed/Yp3EIPuo0ws"
+                title="IDEAS DEN | CHALLENGE 4: HUNTING FOR TREASURE"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen
@@ -458,3 +479,4 @@
     <script src="../js/main.js"></script>
   </body>
 </html>
+
