--- a/pages/team.html
+++ b/pages/team.html
@@ -163,12 +163,6 @@
                 </p>
                 <div class="flex space-x-4">
                   <a
-                    href="#"
-                    class="text-[#00FFFF] hover:text-[#8A2BE2] transition-colors duration-200"
-                  >
-                    <i class="fab fa-linkedin"></i>
-                  </a>
-                  <a
                     href="mailto:d.shimwa@alustudent.com"
                     target="_blank"
                     class="text-[#00FFFF] hover:text-[#8A2BE2] transition-colors duration-200"
@@ -192,7 +186,7 @@
             >
               <div class="relative">
                 <img
-                  src="https://via.placeholder.com/400x400"
+                  src="/images/Kevin.jpg"
                   alt="Leadership Member"
                   class="w-full h-64 object-cover"
                 />
@@ -208,12 +202,6 @@
                   MANAGER OF THE IDEAS DEN
                 </p>
                 <div class="flex space-x-4">
-                  <a
-                    href="#"
-                    class="text-[#00FFFF] hover:text-[#8A2BE2] transition-colors duration-200"
-                  >
-                    <i class="fab fa-linkedin"></i>
-                  </a>
                   <a
                     href="mailto:k.usanase@alustudent.com"
                     target="_blank"
@@ -267,12 +255,6 @@
                 </p>
                 <div class="flex space-x-4">
                   <a
-                    href="#"
-                    class="text-[#00FFFF] hover:text-[#8A2BE2] transition-colors duration-200"
-                  >
-                    <i class="fab fa-linkedin"></i>
-                  </a>
-                  <a
                     href="mailto:l.mutavu@alustudent.com"
                     target="_blank"
                     class="text-[#00FFFF] hover:text-[#8A2BE2] transition-colors duration-200"
@@ -314,12 +296,6 @@
                   SOUND ENGINEER OF THE IDEAS DEN
                 </p>
                 <div class="flex space-x-4">
-                  <a
-                    href="#"
-                    class="text-[#00FFFF] hover:text-[#8A2BE2] transition-colors duration-200"
-                  >
-                    <i class="fab fa-linkedin"></i>
-                  </a>
                   <a
                     href="mailto:s.usanase@alustudent.com"
                     target="_blank"
